# mayastor-extensions

./: .gitignore  .gitmodules  .krew.yaml  .pre-commit-config.yaml  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Jenkinsfile  README.md  _config.yml  commitlint.config.js  default.nix  index.md  index.yaml  mayastor-0.0.0-main.tgz  mayastor-0.0.0.tgz  mayastor-1.0.0.tgz  mayastor-2.0.0-alpha.1.tgz  mayastor-2.0.0-develop.tgz  mayastor-2.0.0-rc.1.tgz  mayastor-2.0.0-rc.2.tgz  mayastor-2.0.0.tgz  mayastor-2.0.1.tgz  mayastor-2.1.0.tgz  mayastor-2.2.0-rc.1.tgz  mayastor-2.2.0.tgz  mayastor-2.3.0.tgz  mayastor-2.4.0.tgz  mayastor-2.5.0.tgz  mayastor-2.5.1-alpha.1.tgz  mayastor-2.5.1.tgz  mayastor-2.6.0.tgz  mayastor-2.6.1.tgz  mayastor-2.7.0.tgz  mayastor-2.7.1.tgz  mayastor-v0.0.0-2023-03-31-11-32-08.tgz  mayastor-v0.0.0-main.tgz  shell.nix
.github/: bors.toml  pull_request_template.md
.github/workflows/: .release-binaries.yml.swp  .release-chart.yaml.swp  develop-chart.yml  develop-to-release-chart.yml  develop-to-release.yml  helm-testing-chart.yml  k8s-ci.yml  main-chart.yml  pr-commitlint.yml  publish-release-artifacts.yml  release-binaries.yml  release-chart.yaml  release-chart.yml  template-chart.yml
call-home/: Cargo.toml
call-home/assets/key/: public.gpg
call-home/src/: collector.rs  common.rs  events.rs  exporter.rs  lib.rs  main.rs  math.rs  stats.rs
call-home/src/collector/: api_models.rs  http_client.rs  k8s_client.rs  mod.rs  report_models.rs
call-home/src/collector/openapi/: build.rs
call-home/src/common/: constants.rs  errors.rs  mod.rs  utils.rs
call-home/src/events/: cache.rs  collector.rs  store.rs
call-home/src/events/cache/: events_cache.rs  pools.rs  volume.rs
call-home/src/events/collector/: events_collector.rs
call-home/src/events/store/: events_store.rs
call-home/src/exporter/: exporter_config.rs
call-home/src/transmitter/: client.rs  encryption.rs
callhome/: Cargo.toml
callhome/src/collector/: k8s_client.rs
callhome/src/common/: constants.rs
chart/: .helmignore  Chart.yaml  README.md  README.md.tmpl  dependencies-images.txt  doc.yaml  images.txt  product.yaml  shell.nix  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  storageclass.yaml
console-logger/: Cargo.toml
constants/: Cargo.toml
docs/: Integrate-exporter-prometheus.md  metrics.md
exporter/: Cargo.toml  README.md
exporter/src/: cache.rs  config.rs  error.rs  lib.rs
exporter/src/client/: grpc_client.rs  mod.rs  pool.rs
exporter/src/collector/: mod.rs  pools_collector.rs
exporter/src/pool/: cache.rs  config.rs  error.rs  mod.rs
exporter/src/pool/client/: grpc_client.rs  mod.rs  pool.rs
exporter/src/pool/collector/: mod.rs  pools_collector.rs
k8s/plugin/: Cargo.toml  README.md
k8s/plugin/src/: constant.rs  lib.rs  main.rs  user_prompt.rs
k8s/plugin/src/resources/: constant.rs  mod.rs  objects.rs  uo_client.rs  upgrade.rs  upgradeoperatorclient.rs
k8s/proxy/: Cargo.toml
k8s/proxy/src/: proxy.rs
k8s/supportability/: Cargo.toml
k8s/supportability/src/: lib.rs  operations.rs
k8s/supportability/src/collect/: common.rs  constants.rs  resource_dump.rs  system_dump.rs  utils.rs
k8s/supportability/src/collect/k8s_resources/: client.rs  k8s_resource_dump.rs
k8s/supportability/src/collect/logs/: k8s_log.rs  loki.rs  mod.rs
k8s/supportability/src/collect/persistent_store/: etcd.rs  mod.rs
k8s/supportability/src/collect/resources/: mod.rs  node.rs  pool.rs  snapshot.rs  traits.rs  utils.rs  volume.rs
k8s/upgrade/: Cargo.toml
k8s/upgrade-job/: Cargo.toml
k8s/upgrade-job/src/: common.rs  helm.rs  main.rs  opts.rs  upgrade.rs
k8s/upgrade-job/src/common/: constants.rs  error.rs  kube_client.rs  macros.rs
k8s/upgrade-job/src/events/: event_recorder.rs
k8s/upgrade-job/src/helm/: chart.rs  client.rs  upgrade.rs  values.rs
k8s/upgrade-job/src/opts/: validators.rs
k8s/upgrade-job/src/upgrade/: data_plane.rs  path.rs  utils.rs
k8s/upgrade/config/: unsupported_versions.yaml
k8s/upgrade/src/: constant.rs  constants.rs  data_plane_upgrade.rs  error.rs  events.rs  file.rs  helm_upgrade.rs  kube_client.rs  lib.rs  macros.rs  preflight_validations.rs  regex.rs  rest_client.rs  upgrade_lib.rs  upgrade_path.rs  upgrade_validations.rs  user_prompt.rs  utils.rs
k8s/upgrade/src/common/: utils.rs
k8s/upgrade/src/constants/: job_constants.rs  plugin_constants.rs
k8s/upgrade/src/error/: job_error.rs
k8s/upgrade/src/events/: event_recorder.rs
k8s/upgrade/src/helm_upgrade/: chart.rs  client.rs  upgrade.rs  values.rs  yaml.rs
k8s/upgrade/src/helm_upgrade/yaml/: yq.rs
k8s/upgrade/src/plugin/: constants.rs  error.rs  mod.rs  objects.rs  preflight_validations.rs  upgrade.rs  user_prompt.rs
k8s/upgrade/src/upgrade_resources/: mod.rs  objects.rs  uo_client.rs  upgrade.rs
metrics-exporter/: Cargo.toml
nix/: overlay.nix  sources.json
openapi/: build.rs
operators/: Cargo.toml
operators/common/src/: lib.rs
operators/common/src/helm/: mod.rs
operators/src/: lib.rs
operators/src/helm_client/: client.rs  error.rs  mod.rs
operators/src/upgrade/: config.rs  main.rs  mod.rs
operators/src/upgrade/common/: constants.rs  error.rs  mod.rs
operators/src/upgrade/controller/: mod.rs  reconcile.rs  reconciler.rs  utils.rs
operators/src/upgrade/helm/: client.rs  mod.rs
operators/src/upgrade/k8s/: client.rs  mod.rs
operators/src/upgrade/k8s/api_resources/: deployment.rs  mod.rs  rbac.rs
operators/src/upgrade/k8s/crd/: mod.rs  v0.rs
operators/src/upgrade/phases/: init.rs  mod.rs  preflight.rs  updating.rs
operators/src/upgrade/rest/: mod.rs  service.rs
operators/src/upgrade/rest/openapi-specs/: v0_api_spec.yaml
operators/upgrade/src/crd/: mod.rs
rpc/: Cargo.toml  build.rs
scripts/: release.sh
stats/: Cargo.toml
stats/src/: common.rs  main.rs
stats/src/common/: constants.rs  error.rs  utils.rs
stats/src/events/: cache.rs  store.rs
stats/src/events/cache/: events_cache.rs  pools.rs  volume.rs
stats/src/events/store/: events_store.rs
tests/: README.md  shell.nix
upgrade-operator/: Cargo.toml
(+83 files in other folders)
