[package]
name = "call-home"
version = "0.1.0"
edition = "2021"
description = "Call-home for observability"

[[bin]]
name = "obs-callhome"
path = "src/main.rs"

[[bin]]
name = "stats"
path = "src/stats.rs"

[dependencies]
openapi = {path = "../dependencies/control-plane/openapi"}
kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_20"] }
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }
clap = { version = "4.1.8", features = ["cargo", "derive", "string"] }
serde_json = "1.0.93"
serde_yaml = "0.9.17"
serde = { version = "1.0.152", features = ["derive"] }
sha256 = "1.1.2"
jsonpath_lib = "0.3.0"
url = "2.3.1"
snafu = "0.7.4"
anyhow = "1.0.69"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter", "std"]}
reqwest = "0.11.14"
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
chrono = "0.4.23"
rand = "0.8.5"
tempfile = "3.3.0"
humantime = "2.1.0"
once_cell = "1.16.0"
bytes = "1.2.1"
utils = { path = "../dependencies/control-plane/utils/utils-lib" }
mbus-api = { path = "../dependencies/control-plane/utils/dependencies/mbus-api" }
