[package]
name = "call-home"
version = "0.1.0"
edition = "2021"
description = "Call-home for observability"


[lib]
name = "obs"
path = "src/lib.rs"

[[bin]]
name = "obs-callhome"
path = "src/bin/callhome/main.rs"

[[bin]]
name = "obs-callhome-stats"
path = "src/bin/stats/main.rs"

[dependencies]
openapi = {path = "../dependencies/control-plane/openapi"}
kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_20"] }
futures = "0.3.28"
tokio = { version = "1.30.0", features = ["full"] }
clap = { version = "4.3.21", features = ["cargo", "derive", "string"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
serde = { version = "1.0.183", features = ["derive"] }
sha256 = "1.3.0"
jsonpath_lib = "0.3.0"
url = "2.4.0"
snafu = "0.7.5"
anyhow = "1.0.72"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter", "std"]}
reqwest = "0.11.18"
reqwest-middleware = "0.2.3"
reqwest-retry = "0.2.2"
chrono = "0.4.26"
rand = "0.8.5"
tempfile = "3.7.1"
humantime = "2.1.0"
once_cell = "1.18.0"
bytes = "1.4.0"
utils = { path = "../dependencies/control-plane/utils/utils-lib" }
events-api = { path = "../dependencies/control-plane/utils/dependencies/events-api" }

# exporter
actix-web = { version = "4.4.0", features = ["rustls"] }
prometheus = "0.13.3"
mime = "0.3.17"

# parse prometheus output
prometheus-parse = "0.2.4"
