[package]
name = "exporter"
description = "Metrics Exporters"
version = "0.1.0"
edition = "2021"
authors = ["Sahil Raja <sahil.raja@datacore.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "metrics-exporter-pool"
path = "src/pool/bin/main.rs"

[dependencies]
actix-web = { version = "4.0.0-beta.9", features = ["rustls"] }
actix-service = "2.0.0"
tokio = { version = "1.12.0", features = ["full"] }
once_cell = "1.8.0"
clap = { version = "3.1.5", features = ["color", "derive"] }
prometheus = "0.13.0"
tonic = "0.8.0"
humantime = "2.1.0"
serde_json = "1.0.79"
serde = "1.0.136"
mime = "0.3.16"
rpc = { path = "../dependencies/control-plane/rpc" }
utils = { path = "../dependencies/control-plane/utils/utils-lib" }
strum = "0.24.1"
strum_macros = "0.24.1"
tracing = "0.1.37"
