[package]
name = "exporter"
description = "Metrics Exporters"
version = "0.1.0"
edition = "2021"
authors = ["Sahil Raja <sahil.raja@datacore.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "metrics-exporter-pool"
path = "src/pool/bin/main.rs"

[dependencies]
actix-web = { version = "4.3.0", features = ["rustls"] }
actix-service = "2.0.2"
tokio = { version = "1.25.0", features = ["full"] }
once_cell = "1.17.0"
clap = { version = "4.1.4", features = ["color", "derive", "string"] }
prometheus = "0.13.3"
tonic = "0.8.3"
humantime = "2.1.0"
serde_json = "1.0.93"
serde = "1.0.152"
mime = "0.3.16"
rpc = { path = "../dependencies/control-plane/rpc" }
utils = { path = "../dependencies/control-plane/utils/utils-lib" }
strum = "0.24.1"
strum_macros = "0.24.3"
tracing = "0.1.37"
