[package]
name = "metrics-exporter"
description = "Metrics Exporters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "metrics-exporter-io-engine"
path = "src/bin/io_engine/main.rs"


[dependencies]
actix-web = { version = "4.4.0", features = ["rustls-0_21"] }
actix-service = "2.0.2"
tokio = { version = "1.33.0", features = ["full"] }
once_cell = "1.18.0"
clap = { version = "4.4.6", features = ["color", "derive", "string"] }
prometheus = "0.13.3"
tonic = "0.10.2"
humantime = "2.1.0"
serde_json = "1.0.107"
serde = "1.0.188"
mime = "0.3.17"
rpc = { path = "../dependencies/control-plane/rpc" }
utils = { path = "../dependencies/control-plane/utils/utils-lib" }
strum = "0.25.0"
strum_macros = "0.25.2"
tracing = "0.1.37"
