[package]
name = "operators"
description = "Upgrade Operator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "operator-upgrade"
path = "src/upgrade/bin/main.rs"

[dependencies]
lazy_static = "1.4.0"
semver = {version="1.0.13", features=["serde"]}
regex = "1.6.0"

# k8s-openapi must match the version required by kube and enable a k8s version feature
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.74.0", default-features = true, features = [ "derive", "runtime" ] }

schemars = "0.8.10"
serde = "1.0.143"
serde_json = "1.0.83"
serde_yaml = "0.9.9"
tokio = {version="1.20.1", features = ["macros", "rt-multi-thread", "time"]}
validator = {version="0.16.0",features=["derive"]}
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
anyhow = "1.0.61"
chrono = "0.4.22"
maplit = "1.0.2"
serde_valid = "0.9.0"
once_cell = "1.14.0"
openapi = {path = "../openapi"}
clap = { version = "3.2.16", features = ["cargo", "derive"] }
url = "2.3.1"
actix-web = "4.2.1"
thiserror = "1.0.37"
humantime = "2.1.0"
file = "1.1.2"
futures = "0.3.24"
mktemp = "0.4.1"
rand = "0.8.5"