[package]
name = "operators"
description = "Upgrade Operator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "operator-upgrade"
path = "src/upgrade/bin/main.rs"

[dependencies]
lazy_static = "1.4.0"
semver = {version="1.0.16", features=["serde"]}
regex = "1.7.1"

# k8s-openapi must match the version required by kube and enable a k8s version feature
k8s-openapi = { version = "0.17.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.78.0", default-features = true, features = [ "derive", "runtime" ] }

schemars = "0.8.11"
serde = "1.0.152"
serde_json = "1.0.93"
serde_yaml = "0.9.17"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "time"] }
actix-web = "4.3.0"
validator = {version="0.16.0",features=["derive"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter", "std"]}
anyhow = "1.0.69"
chrono = "0.4.23"
maplit = "1.0.2"
serde_valid = "0.13.0"
once_cell = "1.17.0"
openapi = {path = "../dependencies/control-plane/openapi"}
clap = { version = "4.1.4", features = ["cargo", "derive"] }
url = "2.3.1"
thiserror = "1.0.38"
humantime = "2.1.0"
file = "1.1.2"
futures = "0.3.26"
tempfile = "3.3.0"
rand = "0.8.5"
either = "1.8.1"
