[package]
name = "stats"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stats-aggregator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = "1.0.150"
once_cell = "1.16.0"
snafu = "0.7.4"
anyhow = "1.0.61"
bytes = "1.2.1"
clap = { version = "4.0.15", features = ["derive"] }
time = "0.3.17"
tracing = "0.1.36"
kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_20"] }
mbus-api = { path = "../dependencies/control-plane/utils/dependencies/mbus-api" }
utils = { path = "../dependencies/control-plane/utils/utils-lib" }
