[package]
name = "kubectl-plugin"
description = "Kubectl Plugin"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "kubectl-mayastor"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "rls" ]
rls = [ "openapi/tower-client-rls", "rest-plugin/rls" ]
tls = [ "openapi/tower-client-tls", "rest-plugin/tls" ]


[dependencies]
openapi = { path = "../../dependencies/control-plane/openapi", default-features = false, features = [ "tower-trace" ] }
utils = { path = "../../dependencies/control-plane/utils/utils-lib" }
rest-plugin = { path = "../../dependencies/control-plane/control-plane/plugin", default-features = false }
kube = { version = "0.78.0", features = [ "derive" ] }
supportability = { path = "../supportability" }
kube-proxy = { path = "../proxy" }
tokio = { version = "1.25.0" }
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["color", "derive"] }
humantime = "2.1.0"
shutdown = { path = "../../dependencies/control-plane/utils/shutdown" }
maplit = "1.0.2"
k8s-openapi = { version = "0.17.0", features = ["v1_20"] }
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
hyper = { version = "0.14.24", features = [ "client", "http1", "http2", "tcp", "stream" ] }
http = "0.2.8"
async-trait = "0.1.64"
serde = "1.0.152"
serde_json = "1.0.93"
url = "2.3.1"

# Tracing
tracing = "0.1.37"
opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread"] }
