[package]
name = "kube-proxy"
version = "1.0.0"
edition = "2021"
description = "Kubernetes OpenApi Client via k8s-proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "rls" ]
rls = [ "openapi/tower-client-rls" ]
tls = [ "openapi/tower-client-tls" ]

[dependencies]
openapi = { path = "../../dependencies/control-plane/openapi", default-features = false, features = [ "tower-trace" ] }
utils = { path = "../../dependencies/control-plane/utils/utils-lib" }
kube = { version = "0.78.0", features = [ "derive" ] }
anyhow = "1.0.69"
kube-forward = { path = "../../dependencies/control-plane/k8s/forward" }
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
