[package]
name = "supportability"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "supportability"
path = "src/lib.rs"

[features]
default = [ "rls" ]
rls = [ "openapi/tower-client-rls" ]
tls = [ "openapi/tower-client-tls" ]

[dependencies]
futures = "0.3"
tokio = { version = "1.33.0", features = ["full"] }
k8s-openapi = { version = "0.19.0", features = ["v1_20"] }
kube = { version = "0.85.0", features = ["derive"] }
yaml-rust = { version = "0.4" }
clap = { version = "4.4.6", features = ["color", "derive"] }
anyhow = "1.0.75"
humantime = "2.1.0"
async-trait = "0.1.73"
serde = "1.0.188"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
lazy_static = "1.4.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
once_cell = "1.18.0"
tar = "0.4"
flate2 = { version = "1.0.27" }
chrono = "0.4.31"
urlencoding = "2.1.3"
downcast-rs = "1.2.0"
schemars = "0.8.15"
http = "0.2.9"
hyper = { version = "0.14.27", features = [ "client", "http1", "http2", "tcp", "stream" ] }
tower = { version = "0.4.13", features = [ "timeout", "util" ] }

k8s-operators = { path = "../../dependencies/control-plane/k8s/operators" }
pstor = { path = "../../dependencies/control-plane/utils/pstor" }
platform = { path = "../../dependencies/control-plane/utils/platform" }
openapi = { path = "../../dependencies/control-plane/openapi", default-features = false, features = [ "tower-client", "tower-trace" ] }
kube-proxy = { path = "../proxy" }
rest-plugin = { path = "../../dependencies/control-plane/control-plane/plugin", default-features = false }
utils = { path = "../../dependencies/control-plane/utils/utils-lib" }
constants = { path = "../../constants" }
