[package]
name = "upgrade-job"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "upgrade-job"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.4", features = ["derive", "env", "string", "color"] }
url = "2.3.1"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
snafu = "0.7.4"
openapi = { path = "../../dependencies/control-plane/openapi" }
utils = { path = "../../dependencies/control-plane/utils/utils-lib" }
kube = { version = "0.78.0",  default-features = true, features = [ "derive", "runtime" ] }
kube-client = "0.78.0"
k8s-openapi = { version = "0.17.0",  default-features = false, features = ["v1_20"] }
regex = "1.7.1"
serde_json = "1.0.93"
serde_yaml = "0.9.17"
serde = { version = "1.0.152", features = ["derive"] }
semver = { version="1.0.17", features = ["serde"] }
