[package]
name = "upgrade"
version = "0.1.0"
edition = "2021"


[lib]
name = "upgrade"
path = "src/lib.rs"

[dependencies]
openapi = { path = "../../dependencies/control-plane/openapi", default-features = false, features = [ "tower-trace" ] }
utils = { path = "../../dependencies/control-plane/utils/utils-lib" }
kube-proxy = { path = "../proxy" }
console-logger = { path = "../../console-logger" }
kube = { version = "0.78.0", features = [ "derive" ] }
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["color", "derive"] }
humantime = "2.1.0"
maplit = "1.0.2"
k8s-openapi = { version = "0.17.0", features = ["v1_20"] }
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
hyper = { version = "0.14.24", features = [ "client", "http1", "http2", "tcp", "stream" ] }
http = "0.2.8"
async-trait = "0.1.64"
serde = "1.0.152"
serde_json = "1.0.93"
snafu = "0.7.4"
serde_yaml = "0.9.17"
semver = { version="1.0.17", features = ["serde"] }
# Tracing
tracing = "0.1.37"
