[package]
name = "upgrade"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "upgrade-job"
path = "src/bin/upgrade-job/main.rs"

[lib]
name = "upgrade"
path = "src/lib.rs"

[dependencies]
openapi = { path = "../../dependencies/control-plane/openapi", default-features = false, features = [ "tower-trace" ] }
utils = { path = "../../dependencies/control-plane/utils/utils-lib" }
kube-proxy = { path = "../proxy" }
console-logger = { path = "../../console-logger" }
kube = { version = "0.78.0",  default-features = true, features = [ "derive", "runtime" ] }
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive", "env", "string", "color"] }
humantime = "2.1.0"
maplit = "1.0.2"
k8s-openapi = { version = "0.17.0", features = ["v1_20"] }
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
hyper = { version = "0.14.27", features = [ "client", "http1", "http2", "tcp", "stream" ] }
http = "0.2.9"
async-trait = "0.1.72"
serde = "1.0.183"
serde_json = "1.0.104"
snafu = "0.7.5"
serde_yaml = "0.9.25"
semver = { version="1.0.18", features = ["serde"] }
url = "2.4.0"
regex = "1.9.3"
tokio = { version = "1.30.0", features = ["full"] }
kube-client = "0.78.0"
tempfile = "3.7.1"
# Tracing
tracing = "0.1.37"
