[package]
name = "upgrade"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "upgrade-job"
path = "src/bin/upgrade-job/main.rs"

[lib]
name = "upgrade"
path = "src/lib.rs"

[dependencies]
openapi = { path = "../../dependencies/control-plane/openapi", default-features = false, features = ["tower-trace"] }
utils = { path = "../../dependencies/control-plane/utils/utils-lib" }
constants = { path = "../../constants" }
kube-proxy = { path = "../proxy" }
console-logger = { path = "../../console-logger" }
convert_case = "0.4.0"
kube = { version = "0.87.0", default-features = true, features = ["derive", "runtime"] }
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive", "env", "string", "color"] }
humantime = "2.1.0"
maplit = "1.0.2"
k8s-openapi = { version = "0.20.0", features = ["v1_22"] }
tower = { version = "0.4.13", features = ["timeout", "util"] }
hyper = { version = "0.14.27", features = ["client", "http1", "http2", "tcp", "stream"] }
http = "0.2.9"
async-trait = "0.1.73"
serde = "1.0.188"
serde_json = "1.0.107"
snafu = "0.7.5"
serde_yaml = "0.9.25"
semver = { version = "1.0.20", features = ["serde"] }
url = "2.4.1"
regex = "1.10.0"
tokio = { version = "1.33.0", features = ["full"] }
tempfile = "3.8.0"
# Tracing
tracing = "0.1.37"
base64 = "0.21.5"
flate2 = "1.0.27"
